Fixes shadow positioning, added alignment option.

--- a/leaflet.labeled-icon.css
+++ b/leaflet.labeled-icon.css
@@ -1,7 +1,27 @@
 .leaflet-labeled-icon label {
     background: white;
     margin-left: 7px;
-    border: 5px rgba(219, 219, 219, 0.3) solid;
-    border-radius: 5px;
+    white-space: nowrap;
+    
+    color: hsl(0, 0%, 20%);
+    white-space: nowrap;
+    font-size: 14px;
+    box-shadow: 0 0 hsl(0, 100%, 100%);
+    background-color: hsl(0, 100%, 100%);
+    border-radius: 4px;
+    padding: 3px;
+    padding-left: 6px;
+    padding-right: 6px;
+    line-height: 14px;
+    
+    cursor:inherit;
+}
+
+.leaflet-labeled-icon label.right {
+    
+}
+
+.leaflet-labeled-icon label.left {
+    
 }
 
